--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,6 +3,8 @@ Django==2.1.5
 django-bootstrap4==0.0.7
 django-summernote==0.8.11.4
 django-taggit==0.23.0
+gunicorn==20.1.0
 Pillow==9.3.0
 pytz==2018.7
 qrcode==7.3.1
+whitenoise==6.2.0
